2006-10-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Names.h, Names.cc: localize heap locking---no wait in
	the Send call [use temporary container instead]; get_by_name
	return sequence of name entries too, as get_list, not single record.

2006-09-30  Petr Ovtchenkov  <ptr@island.corbina.net>

	* _EventHandler.cc: fix wrong decrement and deinitialization
	of EvManager.

	* EventManager.cc: directly use loop thread wake up condition
	[fix problem with thread-safe signaling about loop termination].

2006-08-21  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.cc: close() should shutdown connection
	in NetTransportMgr, like in dtor.

	* NetTransport.cc: remove linger and keepalive socket
	options, it not useful, but may lead to rpblems

2006-08-04  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Cron.h, EvManager.h, NetTransport.h: changes in 
	thread entry function.
	
	* Cron.cc, EvManager.cc, NetTransport.cc: ditto.

2006-07-20  Petr Ovtchenkov  <ptr@island.corbina.net>

	* crc.h: use platform-independent uint32_t for CRC types.

	* NetTransport.cc: use platform-independent uint32_t for
	network communication.

	* Cron.h, EvSession.h, Event.h: ditto

	* EvPack.cc: ditto

2006-07-19  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Event.h: libstdc++ v3, timestamp 20050519 (gcc 3.4.4)
	has __type_traits, while libstdc++ v3, timestamp 20050921
	(gcc 4.0.2) not; I use boost's staff instead.

2006-07-13  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.cc: add guard for dispatch loop stop flag.

	* EvManager.h: idem

	* NetTransport.cc: socket manager already provide connection
	loop; socket in NetTransport should be shutdown to break down
	through infinite read.

	* NetTransport.h: prepare NetTransport to current sockmgr.

	* _EventHandler.cc: add guard for Init, where EvManager and Names
	started.

	* libstem (Repository): library version 4.1.0.

2006-06-28  Petr Ovtchenkov  <ptr@island.corbina.net>
